# ikt103g22v-videregaende_softwareutvikling

./: .gitignore  README.md
Source/: game.cpp  game.h  main.cpp  sources.txt
Source/map/: animation.h  map.cpp
Source/objects/: block.cpp  coin.h  item.cpp  item.h  layer.cpp  layer.h  mushroom.cpp  mushroom.h  pipe.h  player.cpp
assignment_2_1/: .gitignore  CMakeLists.txt  main.cpp
assignment_4/assignment_4_1/: CMakeLists.txt  main.cpp  rapidcsv.h
assignment_4/assignment_4_2/: .gitignore  CMakeLists.txt  main.cpp  student.h
assignment_5_1/: .gitignore  CMakeLists.txt  main.cpp  student.h  students.json
assignment_6_1/: CMakeLists.txt  main.cpp
ikt103-final-exam/Source/: CMakeLists.txt
ikt103-final-exam/Source/data/: map.json
ikt103-final-exam/Source/map/: animation.cpp  map.h
ikt103-final-exam/Source/objects/: block.h  coin.cpp  object.h  pipe.cpp  player.h
libraries/ORM/: CMakeLists.txt  main.cpp
libraries/sqlite/: CMakeLists.txt
teacher-provided/: README.md
teacher-provided/SMFL_test/: CMakeLists.txt
teacher-provided/examples/01_io/: CMakeLists.txt
teacher-provided/examples/02_strings/: CMakeLists.txt  main.cpp
teacher-provided/examples/05_std_map/: main.cpp
teacher-provided/examples/06_std_map_erase/: CMakeLists.txt
teacher-provided/examples/07_std_map_in_map/: main.cpp
teacher-provided/examples/08_classes/: CMakeLists.txt  main.cpp  string_value.cpp  string_value.h
teacher-provided/examples/09_inheritance/: CMakeLists.txt  album.cpp  album.h  book.cpp  book.h  item.cpp  item.h  main.cpp
teacher-provided/examples/10_csv/: CMakeLists.txt  data.csv  main.cpp
teacher-provided/examples/11_json/: CMakeLists.txt  data.json  main.cpp
teacher-provided/examples/12_sql/: CMakeLists.txt  main.cpp
teacher-provided/examples/12_sql/examples/: delete_example.cpp  delete_example.h  insert_example.cpp  insert_example.h  select_example.cpp  select_example.h  update_example.cpp  update_example.h
teacher-provided/examples/13_orm/: CMakeLists.txt  main.cpp
teacher-provided/examples/13_orm/examples/: delete_example.cpp  delete_example.h  insert_example.cpp  insert_example.h  select_example.cpp  select_example.h  update_example.cpp  update_example.h
teacher-provided/examples/13_orm/util/: storage.h  util.cpp  util.h
teacher-provided/examples/14_threads_mutexes/: CMakeLists.txt  main.cpp
teacher-provided/examples/15_threads_semaphores/: CMakeLists.txt  main.cpp
teacher-provided/examples/16_rest_client/: CMakeLists.txt  main.cpp
teacher-provided/examples/17_patterns/: CMakeLists.txt  main.cpp
teacher-provided/examples/17_patterns/controllers/: README.md  author_controller.cpp  author_controller.h
teacher-provided/examples/17_patterns/models/: README.md  author.h  book.h  library.h
teacher-provided/examples/17_patterns/views/: README.md  author_menu.cpp  author_menu.h  main_menu.cpp  main_menu.h
teacher-provided/examples/18_sfml_simple/: CMakeLists.txt  main.cpp
teacher-provided/examples/19_sfml_input/: CMakeLists.txt  app.cpp
teacher-provided/examples/20_sfml_tiled/: CMakeLists.txt  game.cpp  game.h  main.cpp
teacher-provided/examples/20_sfml_tiled/data/: map.json
teacher-provided/examples/20_sfml_tiled/map/: map.cpp  map.h
teacher-provided/examples/20_sfml_tiled/objects/: layer.cpp  layer.h  object.h  sprite.cpp  sprite.h
teacher-provided/examples/21_sfml_lecture/: CMakeLists.txt  circle.h  main.cpp  object.h  square.h
teacher-provided/examples/22_qt_simple/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
teacher-provided/tests/: test.sh  test_assignment_2_1.py  test_assignment_4_1.py  test_assignment_4_2.py  test_assignment_5_1.py  test_assignment_6_1.py  test_temp_files.py
